* appsettings.json: Setup DbContext and add SQLServer connection
* MakeshiftReddit.csproj:
* launchSettings.json:

* Startup.cs: Add DbContext and setup SQLServer connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; port=1433 ; User=sa; Database=PostsDB; Password=Nmsf@1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
