* PostVotes.cs: * CommentVotes.cs: * VoteItemRequestDto.cs: * CommentItemRequestDto.cs: * GetUserPosts.cs: * PostCommandHandler.cs: * VoteCommandHandler.cs: * GetPostsByUser.cs: * CommentsCommandHandler.cs: * CreatePostHandler.cs: * DeletePostHandler.cs: * UpdatePostHandler.cs: * PostQueriesHandler.cs: * CreatePostVoteHandler.cs: * CreateCommentHandler.cs: * UpdateCommentHandler.cs: * DeleteCommentHandler.cs: * CreateCommentVoteHandler.cs: * PostCommentsQueriesHandler.cs:
* PostItemRequestDto.cs: Add entity framework Identity tables

* appsettings.json: Add dotnet Entity framework Identity

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; port=1433 ; User=sa; Database=PostsDB; Password=Nmsf@1234"
+    "DefaultConnection": "Server=localhost; User=sa; Database=PostsDB; Password=Nmsf@1234"
   },
   "Logging": {
     "LogLevel": {
